# COSMOS-AFS

./: LICENSE  README.md
Attitude_Control/: Satellite1_Attitude_Quaternions.csv
Ground_Station/: GroundStation.py
Microcontroller_Scripts/: ESP32_CAM_TEST.ino  ESP32_SERVER  ESP32_SERVER_TEST  Radio_Receiver.ino  Radio_Transmitter.ino  WiFi_Get.py
Microcontroller_Scripts/ESB32-CAM/: images_via_serial___v3.ino
Microcontroller_Scripts/ESB32-CAM/misc/: testImageViaArduinoConsole_Grayscale_20231101.m  testImageViaArduinoConsole_Grayscale_20231101_v2.txt
Microcontroller_Scripts/ESB32-CAM/old/: images_via_serial___v1.ino
Microcontroller_Scripts/ESB32-CAM/python/: serial_to_numpy.py
Microcontroller_Scripts/ESP32-CAM/ESP32_CAM_TEST/: ESP32_CAM_TEST.ino
Microcontroller_Scripts/ESP32-CAM/examples/: acquisition_and_tracking.py  mission_to_voltage.py  mission_to_voltage__oldViaSerial20240129.py
Microcontroller_Scripts/ESP32-CAM/image_via_serial/: image_via_serial.ino  image_via_serial.py
Microcontroller_Scripts/ESP32-CAM/old/: testImage___temporaryUse.txt
Microcontroller_Scripts/ESP32-CAM/old/CameraSerial/: CameraSerial.ino  getImage_v2.py  getImage_v3.py  images_via_serial___PIL.py  images_via_serial___decoder.py
Microcontroller_Scripts/ESP32-CAM/old/images_via_serial/: getImage.py  images_via_serial.ino  images_via_serial.py
Microcontroller_Scripts/ESP32-CAM/src/: COSMOS_AFS.py  WiFi_Get.py
Microcontroller_Scripts/ESP32-CAM/src/ESP32_CAM_TEST/: ESP32_CAM_TEST.ino
Microcontroller_Scripts/ESP32_DAQ/: ESP32_DAQ.ino
Microcontroller_Scripts/ESP32_DAQ/accelerometer_only/: accelerometer_only.ino
Microcontroller_Scripts/ESP32_DAQ/battery_charge_only/: battery_charge_only.ino
Microcontroller_Scripts/ESP32_GroundStation/: ESP32_GroundStation.ino
Microcontroller_Scripts/ESP32_PPT/: notes.txt
Microcontroller_Scripts/ESP32_Server/: ESP32_Server.ino
ROS_Template/: Template.py
cosmos_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cosmos_ws/log/: latest_build
cosmos_ws/src/attitude_control_pkg/: CMakeLists.txt  setup.cfg  setup.py
cosmos_ws/src/attitude_control_pkg/include/attitude_control_pkg/: attitude_control_node.hpp  reaction_wheels_node.hpp
cosmos_ws/src/attitude_control_pkg/src/: attitude_control_node.cpp  reaction_wheels_node.cpp
cosmos_ws/src/attitude_service_pkg/: package.xml  setup.cfg  setup.py
cosmos_ws/src/camera_pkg/: package.xml  setup.py
cosmos_ws/src/camera_pkg/camera_pkg/: CameraSM.py  (+2 more)
cosmos_ws/src/communication_pkg/: package.xml  setup.py
cosmos_ws/src/cosmos_bringup/: CMakeLists.txt
cosmos_ws/src/cosmos_interfaces/: CMakeLists.txt  package.xml
cosmos_ws/src/cosmos_interfaces/msg/: Attitude__kinematics_and_ode45.msg  Camera.msg  Camera_capture_and_process.msg  DCM.msg  Position.msg  ReactionWheels.msg  StateMachine.msg
cosmos_ws/src/cosmos_interfaces/srv/: AAToDCM.srv
cosmos_ws/src/kinematics_pkg/: package.xml  setup.cfg  setup.py
cosmos_ws/src/sensors_pkg/: setup.py
cosmos_ws/src/state_machine_pkg/: CMakeLists.txt  package.xml
cosmos_ws/src/state_machine_pkg/include/state_machine_pkg/: state_machine_node.hpp
cosmos_ws/src/state_machine_pkg/src/: state_machine_node.cpp  state_machine_node.py
doc/: design.md  pseudocode_ros__v2.docx  pseudocode_ros__v3.docx  requirements.md  user_manual.md
docs/: accelerometer.md  attitude_threshold.md  attitude_thresholding_with_IMU.md  attitude_thresholding_without_IMU.md  ros_commands.md
tests/: autotest.txt
(+193 files in other folders)
